apollo-router/src/apollo_studio_interop/snapshots/apollo_router__apollo_studio_interop__tests__basic_whitespace.snap
---
source: apollo-router/src/apollo_studio_interop/tests.rs
expression: "&generated"
---
result:
  statsReportKey: "# MyQuery\nquery MyQuery{noInputQuery{id}}"
  referencedFieldsByType:
    EverythingResponse:
      fieldNames:
        - id
      isInterface: false
    Query:
      fieldNames:
        - noInputQuery
      isInterface: false
