apollo-router/src/apollo_studio_interop/snapshots/apollo_router__apollo_studio_interop__tests__comma_lower_bound.snap
---
source: apollo-router/src/apollo_studio_interop/tests.rs
expression: "&generated"
---
result:
  statsReportKey: "# TestCommaLowerBound\nquery TestCommaLowerBound($arg:String,$slightlyTooLongName1234:String){manyArgsQuery(arg1:$arg arg2:$arg arg3:$arg arg4:$slightlyTooLongName1234){enumResponse}}"
  referencedFieldsByType:
    EverythingResponse:
      fieldNames:
        - enumResponse
      isInterface: false
    Query:
      fieldNames:
        - manyArgsQuery
      isInterface: false
