apollo-router/src/apollo_studio_interop/snapshots/apollo_router__apollo_studio_interop__tests__comma_separator_always.snap
---
source: apollo-router/src/apollo_studio_interop/tests.rs
expression: "&generated"
---
result:
  statsReportKey: "# QueryCommaEdgeCase\nquery QueryCommaEdgeCase{enumInputQuery(anotherStr:\"\",enumInput:SOME_VALUE_1,stringInput:\"\"){enumResponse}}"
  referencedFieldsByType:
    EverythingResponse:
      fieldNames:
        - enumResponse
      isInterface: false
    Query:
      fieldNames:
        - enumInputQuery
      isInterface: false
